--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -552,54 +552,85 @@ typedef struct CvCARTClassifier
 
 ![](https://img-blog.csdn.net/20151020151912233?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center)
 
-这种具有较少结构的设计可以有效的避免过拟合现象，并且在训练速度较为快速。下面结合python示意代码具体说明模型各层参数与功能：
+这种具有较少结构的设计可以有效的避免过拟合现象，并且在训练速度较为快速。下面结合模型的python示意代码具体说明模型各层参数与功能：
 
 (1)**卷积层1**(Convolutional Layer 1)
 
 ```python
-conv1 = convolution2d(images, 96, [7,7], [4, 4],padding='VALID', biases_initializer=tf.constant_initializer(0.), scope='conv1')
-pool1 = max_pool2d(conv1, 3, 2, padding='VALID', scope='pool1')
-norm1 = tf.nn.local_response_normalization(pool1, 5, alpha=0.0001, beta=0.75, name='norm1')
+conv1 = convolution2d(images, 96, [7,7],[4,4],padding='VALID',...)
+pool1 = max_pool2d(conv1, 3, 2,...)
+norm1 = tf.nn.local_response_normalization(pool1, ...)
 ```
+
+第一层卷积层中采用96个卷积核，且每个卷积核的参数大小为:$3*7*7$；补0策略为只执行有效卷积，对边界数据不处理；激活函数默认为ReLU，即:
+
+$$\operatorname{ReLU}(x)=\left\{\begin{array}{ll}{x} & {\text { if } x>0} \\ {0} & {\text { if } x \leq 0}\end{array}\right.$$
+
+其池化层执行Maximum Pooling，且池化的大小为$3*3$，strides为2。且其后添加了一个局部响应归一化层，目的为提高网络的泛化能力，其公式[17]为：
+
+$$b_{x, y}^{i}=a_{x, y}^{i} /\left(k+\alpha \sum_{j=\max (0, i-n / 2)}^{\min (N-1, i+n / 2)}\left(a_{x, y}^{j}\right)^{2}\right)^{\beta}$$
+
 
 (2)**卷积层2**(Convolutional Layer 2)
 
 ```python
-conv2 = convolution2d(norm1, 256, [5, 5], [1, 1], padding='SAME', scope='conv2') 
-pool2 = max_pool2d(conv2, 3, 2, padding='VALID', scope='pool2')
-norm2 = tf.nn.local_response_normalization(pool2, 5, alpha=0.0001, beta=0.75, name='norm2')
+conv2 = convolution2d(norm1, 256, [5, 5], [1, 1], padding='SAME', ...) 
+pool2 = max_pool2d(conv2, 3, 2, ...)
+norm2 = tf.nn.local_response_normalization(pool2, ...)
 ```
+
+第二层卷积层中选择使用256个卷积核，且每个卷积核的参数大小为$96*5*5$；补0策略为保留边界处的卷积结果。
+
+池化层与局部响应归一化层参数与第一层卷积层的参数一致。
+
 (3)**卷积层3**(Convolutional Layer 3)
 
 ```python
 
-conv3 = convolution2d(norm2, 384, [3, 3], [1, 1], biases_initializer=tf.constant_initializer(0.), padding='SAME', scope='conv3')
-pool3 = max_pool2d(conv3, 3, 2, padding='VALID', scope='pool3')
+conv3 = convolution2d(norm2, 384, [3, 3], [1, 1],padding='SAME',...)
+pool3 = max_pool2d(conv3, 3, 2,...)
 flat = tf.reshape(pool3, [-1, 384*6*6], name='reshape')
 ```
+
+第三层卷积层中选择使用384个卷积核，且每个卷积核的参数大小为$256*3*3$；补0策略为保留边界处的卷积结果。
+
+池化层与第一层卷积层的参数一致；而第三层的tf.reshape函数为一变换函数，作用为将张量tensor变换为参数shape的形式。
 
 (4)**全连接层1**(Full connected Layer 1)
 
 ```python
 
-full1 = fully_connected(flat, 512, scope='full1')
+full1 = fully_connected(flat, 512,...)
 drop1 = tf.nn.dropout(full1, pkeep, name='drop1')
 ```
+
+第一层全连接层神经元个数为512。
+
+dropout层为训练样本模型时，训练样本过少而防止过拟合加入的一层神经元。其作用为在训练更新参数的过程中，按照一定概率随机断开输入神经元。其图示如下：
+
+![](http://blog.christianperone.com/wp-content/uploads/2015/08/dropout.jpeg)
 
 (5)**全连接层2**(Full connected Layer 2)
 
 ```python
 
-full2 = fully_connected(drop1, 512, scope='full2')
+full2 = fully_connected(drop1, 512,...)
 drop2 = tf.nn.dropout(full2, pkeep, name='drop2')
 ```
+第二层全连接层，其神经元个数也是512个。
 
 (6)**输出层**(Output)
 
-```python
-```
+对于本文，性别识别为二分类问题，故其输出神经元个数为2。
+
+综上所述，其网络结构可以由下图表示：
+
+![](https://img-blog.csdn.net/20160906224538327)
 
 ## 4.3 卷积神经网络训练过程
+
+
+
 ## 4.4 结果仿真和分析
 
 # 第五章 总结与展望
@@ -622,3 +653,4 @@ drop2 = tf.nn.dropout(full2, pkeep, name='drop2')
 [14]:基于人脸图像的性别识别研究
 [15]:[Cascade Classifier Training](https://docs.opencv.org/master/dc/d88/tutorial_traincascade.html)
 [16]:[_cvhaartraining.h](https://github.com/npinto/opencv/blob/master/apps/haartraining/_cvhaartraining.h)
+[17]:ImageNet Classification with Deep Convolutional Neural Networks
