--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -606,7 +606,11 @@ drop1 = tf.nn.dropout(full1, pkeep, name='drop1')
 
 第一层全连接层神经元个数为512。
 
-dropout层为训练样本模型时，训练样本过少而防止过拟合加入的一层神经元。其作用为在训练更新参数的过程中，按照一定概率随机断开输入神经元。其图示如下：
+dropout层为训练样本模型时，训练样本过少而防止过拟合加入的一层神经元。其作用为在训练更新参数的过程中，按照一定概率随机断开输入神经元，其原理可以下面公式予以表示：
+
+$$y=f(Wx)\circ m,m_{i}\sim Bernoulli(p)$$
+
+Dropout层网络结构图示如下：
 
 ![](http://blog.christianperone.com/wp-content/uploads/2015/08/dropout.jpeg)
 
@@ -629,9 +633,35 @@ drop2 = tf.nn.dropout(full2, pkeep, name='drop2')
 
 ## 4.3 卷积神经网络训练过程
 
+对4.2节提出的神经网络进行训练，本文使用训练环境配置具体如下：
 
+```md
+- GPU:GTX1060 
+
+- CUDA version 9.0
+
+- Cudnn version 7.00
+
+- Python version 3.6
+
+- GCC version 6.5
+```
+
+论文使用的人脸图像数据为Adience data[18]，论文训练次数设置为30000次，具体训练参数变化如下图所示：
+
+- 学习率
+
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g37m6mtqjvj30pw0bwgm3.jpg)
+
+- 误差
+
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g37lyn3l1jj30qf0bxdhc.jpg)
+
+可以观察到当学习次数到达20000次时，学习率已经趋于0，而最终的误差也在0.15左右震荡，网络训练在30000次时已经趋于稳定。
 
 ## 4.4 结果仿真和分析
+
+在此我们
 
 # 第五章 总结与展望
 
@@ -654,3 +684,4 @@ drop2 = tf.nn.dropout(full2, pkeep, name='drop2')
 [15]:[Cascade Classifier Training](https://docs.opencv.org/master/dc/d88/tutorial_traincascade.html)
 [16]:[_cvhaartraining.h](https://github.com/npinto/opencv/blob/master/apps/haartraining/_cvhaartraining.h)
 [17]:ImageNet Classification with Deep Convolutional Neural Networks
+[18]:[Unfiltered faces for gender and age classification](https://talhassner.github.io/home/projects/Adience/Adience-data.html)
