--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -661,7 +661,12 @@ drop2 = tf.nn.dropout(full2, pkeep, name='drop2')
 
 ## 4.4 结果仿真和分析
 
-在此我们
+在此我们使用由4.3节训练完成的模型对人脸图像进行性别测试，以验证模型的优劣。如下图实例：
+
+在此我们选用在网络抓取的100张图片进行验证，其中男女各为50张。大致如下所示：
+
+
+讲过测试，我们得出正确率曲线如下：
 
 # 第五章 总结与展望
 
