--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -548,7 +548,7 @@ typedef struct CvCARTClassifier
 
 ## 4.2 用于性别识别的卷积神经网络结构设计
 
-对于论文的性别预测而言，为一个二分类问题。本文中采取Gil Levi、Tal Hassner于文献[3]中提出的网络结构，其仅含三个卷积层和两个具有较少神经元的全连接层。具体的结构如下所示：
+对于论文的性别预测而言，为一个二分类问题。本文中采取Gil Levi、Tal Hassner于文献[3]中提出的网络结构，其为AlexNet卷积神经网络的修改版本，且仅含三个卷积层和两个具有较少神经元的全连接层。具体的结构如下所示：
 
 ![](https://img-blog.csdn.net/20151020151912233?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center)
 
@@ -655,11 +655,31 @@ drop2 = tf.nn.dropout(full2, pkeep, name='drop2')
 
 在此我们选用在网络抓取的100张图片进行验证，其中男女各为50张。其中一部分如下所示：
 
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g3885n5qdkj30ne0bitq2.jpg)
 
 
-讲过测试，我们得出正确率曲线如下：
+经过测试，我们得出正确率曲线如下：
+
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g387sg5q99j311y0cq74u.jpg)
+
+我们可以发现，男性的识别成功率在$90%$左右，而女性的识别成功率在$80%$左右，均取得了不错的结果。这个结果说明了本文中基于AlexNet改进的卷积神经网络模型较为成功，可以在合理的精度内有效地完成解决性别识别的任务。
+
+## 总结
+
+在本章内，文章首先研究了基于Haar特征与Adaboost算法的人脸检测方法，之后通过opencv的相关开源代码对之进行了仿真。在本章的第二小节重点对卷积神经网络的网络架构——配合实际应用的python代码——进行了说明，三、四小节对网络的训练过程以及训练之后模型的结果进行了仿真与说明。测试图片为在网络中抓取的明星图片，在大多数为正面照、少部分为侧面照的情况下，均取得了在识别率$80%$之上(男性图片达到$90%$)的结果，说明了此卷积神经网络在解决性别识别的问题上是构建成功的。
 
 # 第五章 总结与展望
+
+在人工智能浪潮席卷世界的今天，机器学习作为其中最为重要的一个部分，在目前显示出了最为强大的能力，切实地解决了各行各业中无数之前难以解决的问题。而机器视觉在机器学习中占有重要的一个位置，近年受到了全球科技工作者的注意。人脸监测与性别识别作为机器视觉中的一项重要内容，对社会治安、用户服务等方方面面都有着重要的研究价值。
+
+文章使用了基于AlexNet卷积神经网络的修改版本，较少的神经层使得网络不易陷入过拟合，而在最后的仿真结果测试中也证明了这一点，性别的识别率达到了较高的水平。结果说明，在正面照的情况下，该网络模型可以取得较高的正确识别率，但是在侧面照、环境噪音较多的情况下，识别率较低，但是也显著高于$50%$。
+
+文章的不足以及可以改进的地方在于：
+
+1)对环境噪音较多环境的图片识别率的提升。对于这种情况，本文的网络层数便过于稀少，如何合理的安排与设计网络层数、结构，是核心的问题；
+
+2)对于训练速度的改进。如论文[7]中提到的PSO-CNN算法，其可以加速梯度下降算法以达到节省时间的效果，但是其作者训练次数在50左右，能否在上万的量级中也达到加速的效果需要进一步的检验；
+
 
 # 附录
 
