--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -633,21 +633,7 @@ drop2 = tf.nn.dropout(full2, pkeep, name='drop2')
 
 ## 4.3 卷积神经网络训练过程
 
-对4.2节提出的神经网络进行训练，本文使用训练环境配置具体如下：
-
-```md
-- GPU:GTX1060 
-
-- CUDA version 9.0
-
-- Cudnn version 7.00
-
-- Python version 3.6
-
-- GCC version 6.5
-```
-
-论文使用的人脸图像数据为Adience data[18]，论文训练次数设置为30000次，具体训练参数变化如下图所示：
+对4.2节提出的神经网络进行训练，论文使用的人脸图像数据为Adience data[18]，论文训练次数设置为30000次，具体训练参数变化如下图所示：
 
 - 学习率
 
@@ -663,7 +649,12 @@ drop2 = tf.nn.dropout(full2, pkeep, name='drop2')
 
 在此我们使用由4.3节训练完成的模型对人脸图像进行性别测试，以验证模型的优劣。如下图实例：
 
-在此我们选用在网络抓取的100张图片进行验证，其中男女各为50张。大致如下所示：
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g38218mf5sj30tn0bfn7x.jpg)
+
+我们可以看出，在以上的若干测试图片中，三张图片变现良好，一张图片虽然给出正确性别，但是其概率并不高。在证明此模型为有效模型的基础上，我们制作一个含有大量图片的数据集去检测其识别率。
+
+在此我们选用在网络抓取的100张图片进行验证，其中男女各为50张。其中一部分如下所示：
+
 
 
 讲过测试，我们得出正确率曲线如下：
